Wed Aug  4 19:59:54 BST 2004 (njh)
----------------------------------
  * libclamav:	Improved the decoding of multipart messages and MIME headers

Wed Aug  4 20:01:26 CEST 2004 (tk)
----------------------------------
  * libclamav: fix compilation error with Sun's compiler (reported by
	       Alex S Moore <asmoore*edge.net>)

Wed Aug  4 19:06:52 CEST 2004 (tk)
----------------------------------
  * libclamav: re-activate new mail detection mechanism

Wed Aug  4 17:34:46 CEST 2004 (tk)
----------------------------------
  * libclamav: petite: big-endian fixes
  * libclamav: pe: activate Petite unpacker

Tue Aug  3 20:20:11 CEST 2004 (tk)
----------------------------------
  * libclamav: matcher-bm: fix segfault with short files (problem reported by
	       Charlie Watts <cewatts*brainstorminternet.net>)

Tue Aug  3 18:50:57 CEST 2004 (tk)
----------------------------------
  * clamdscan: print warnings when ignoring options (requested by Tomasz
	       Papszun <tomek*clamav.net>)

Tue Aug  3 02:20:03 CEST 2004 (tk)
----------------------------------
  * libclamav: scanhtml: fix memory leak (reported by Mike Lambert
	       <lambert*jeol.com>)

Tue Aug  3 02:03:17 CEST 2004 (tk)
----------------------------------
  * libclamav: matcher-bm: fix scan boundary

Mon Aug  2 19:03:33 CEST 2004 (tk)
----------------------------------
  * libclamav: pe: integrate Petite unpacker from aCaB (not yet activated)

Mon Aug  2 12:28:31 CEST 2004 (tk)
----------------------------------
  * clamd: scanstream: protect access to static memory referenced by
	   gethostbyname (thanks to David Champion <dgc*uchicago.edu>)

Sun Aug  1 09:21:50 BST 2004 (njh)
----------------------------------
  * libclamav/blob.c:	Ensure attachments with pathnames are scanned under
  				Cygwin

Fri Jul 30 21:08:29 CEST 2004 (tk)
----------------------------------
  * libclamav: mspack: fix memory leak

Fri Jul 30 19:47:11 CEST 2004 (tk)
----------------------------------